--- a/reviewboard/static/rb/css/ui/buttons.less
+++ b/reviewboard/static/rb/css/ui/buttons.less
@@ -300,6 +300,7 @@
   display: inline-flex;
   gap: 0.5em;
   align-items: center;
+  justify-content: center;
   font-family: @font-family;
   font-weight: normal;
   font-size: @_button-vars[@font-size];
